...
    >
      <BottomSheetView style={styles.bottomSheetContentContainer}>
        <View style={styles.innerContainer}>
          <View style={styles.weatherCard}>
            {weather ? (
              <>
                <Text style={styles.title} accessibilityLabel={"weather-screen"}>Weather Report</Text>

                <View style={styles.temperatureContainer}>
                  <Text style={styles.temperature}>
                    {weather.current.temperature_2m.toFixed(1)}°F
                  </Text>
                </View>
...
