{
  "terra-off-road": "Terra Off-Road",
  "login": "Continue",
  "slogan": "Prepare for your adventure",
  "map": "Map",
  "poi": "POI",
  "gear": "Gear",
  "weather": "Weather",
  "main menu": "Main Menu",
  "profile": "Profile",
  "settings": "Settings",
  "help / faqs": "Help / FAQs",
  "contact us": "Contact Us",
  "trip packing list": "Trip Packing List",
  "vehicle items": "Vehicle Items",
  "shelter": "Shelter",
  "sleeping system": "Sleeping System",
  "emergency/medical": "Emergency/Medical",
  "clothing": "Clothing",
  "cooking": "Cooking",
  "food": "Food",
  "hygiene":"Hygiene",
  "lighting/signaling": "Lighting/Signaling",
  "electronics": "Electronics",
  "misc": "Misc",
  "items": "Items",
  "add item": "Add Item",
  "enter new item": "Enter new item...",
  "add": "Add",
  "cancel": "Cancel",
  "delete item": "Delete Item",
  "are you sure you want to delete": "Are you sure you want to delete",
  "delete": "Delete",
  "loading": "Loading",
  "error": "Error",
  "failed to load packing list": "Failed to load packing list",
  "failed to save packing list": "Failed to save packing list",
  "please enter an item name": "Please enter an item name"
}
